--- a/Case_1_SQL_Queries.ipynb
+++ b/Case_1_SQL_Queries.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": "<img src=\"/work/indu5000_Case_1/Images/DB Design.png\">",
+   "source": "<img src=\"//indu5000_Case_1/Images/DB_Design.png\">",
    "metadata": {
     "tags": [],
     "cell_id": "00004-b8d3cdde-1f31-457e-87c9-bb0ae6fe22f2",
@@ -559,10 +559,19 @@
   },
   {
    "cell_type": "markdown",
-   "source": "<img src=\"/work/indu5000_Case_1/Images/SQL Joins.png\">",
+   "source": "<img src=\"//indu5000_Case_1/Images/SQL_Joins.png\">",
    "metadata": {
     "tags": [],
     "cell_id": "00061-8dc1fcd1-68ce-46b7-bd08-4070349cfae4",
+    "deepnote_cell_type": "markdown"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "[AAA](/Images/SQL Joins.png)",
+   "metadata": {
+    "tags": [],
+    "cell_id": "00062-49d1a3a3-36e4-48f9-b5a8-dd20545853bb",
     "deepnote_cell_type": "markdown"
    }
   },
@@ -788,6 +797,7 @@
     "deepnote_cell_type": "sql"
    },
    "source": "\n\ndf_1 = _deepnote_execute_sql(\"\"\"SELECT * FROM ElectroSQL.clientes\n\"\"\", 'SQL_BF5F6FDA_0BB4_4AD5_B9EB_0C2E93F79886')\ndf_1",
+   "execution_count": 2,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1018,8 +1028,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "code",
@@ -1036,6 +1045,7 @@
     "deepnote_cell_type": "sql"
    },
    "source": "\n\ndf_2 = _deepnote_execute_sql(\"\"\"SELECT * FROM \"electrosql\".\"productos\"\n\"\"\", 'SQL_BF5F6FDA_0BB4_4AD5_B9EB_0C2E93F79886')\ndf_2",
+   "execution_count": 3,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1222,8 +1232,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
@@ -1240,6 +1249,7 @@
     "deepnote_cell_type": "sql"
    },
    "source": "\n\ndf_3 = _deepnote_execute_sql(\"\"\"SELECT * FROM \"electrosql\".\"transacciones\"\n\"\"\", 'SQL_BF5F6FDA_0BB4_4AD5_B9EB_0C2E93F79886')\ndf_3",
+   "execution_count": 4,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1653,8 +1663,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "markdown",
